--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "env": "^0.0.2",
     "pkce-challenge": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.0"
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.5.0",
+    "spotify-preview-finder": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
